tdf#161511: create column if not exists

Change-Id: I56a4792beab4c98a676b10d975fcd9be3fbef3ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168767
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 231722a7791df5e4315aefa1cc902bc1c0dc2e00)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168793
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>